# Omnifuzz

./: .gitignore  CMakeLists.txt  DETAILS.md  Makefile  README.md  a.c  setup.py
fuzzers/: CMakeLists.txt  afl.cc  grey_box.cc
fuzzers/program_under_test/: Makefile  coldbrew.bc  coldbrew.c  coldbrew.ll
libOmnifuzz/: Makefile  libOmnifuzz.cc  libOmnifuzz.h  main.cc
llvm-project-llvmorg-14.0.6/llvm/include/llvm/Transforms/Omnifuzz/: OmnifuzzInstrumentation.h
llvm-project-llvmorg-14.0.6/llvm/include/llvm/Transforms/Omnifuzz/Feedback/: afl_feedback.h  feedback.h
llvm-project-llvmorg-14.0.6/llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm-project-llvmorg-14.0.6/llvm/lib/Transforms/Omnifuzz/: CMakeLists.txt  OmnifuzzInstrumentation.cpp
llvm-project-llvmorg-14.0.6/llvm/lib/Transforms/Omnifuzz/Feedback/: afl_feedback.cc
llvm-project/llvm/include/llvm/Transforms/Omnifuzz/: OmnifuzzInstrumentation.h
llvm-project/llvm/include/llvm/Transforms/Omnifuzz/Feedback/: afl_feedback.h  debug_feedback.h  feedback.h
llvm-project/llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm-project/llvm/lib/Transforms/Omnifuzz/: CMakeLists.txt  OmnifuzzInstrumentation.cpp
llvm-project/llvm/lib/Transforms/Omnifuzz/Feedback/: afl_feedback.cc  debug_feedback.cc
omnifuzz/: CMakeLists.txt  fuzzer.cc  fuzzer.h  fuzzer_state.h  omnifuzz.h  testcase.h  testcase_file_manager.cc  testcase_file_manager.h  timer.cc  timer.h
omnifuzz/executor/: CMakeLists.txt  executor.cc  executor.h  fault.h  file_descriptor.h  fork_client.cc  fork_client.h  forkserver.cc  forkserver.h  forksrv_executor.cc  forksrv_executor.h
omnifuzz/executor/unit_test/: Makefile  fsrv_exec_test.cc  fsrv_instance.cc
omnifuzz/feedback/: CMakeLists.txt  afl_feedback.cc  afl_feedback.h  afl_feedback_mechanism.cc  afl_feedback_mechanism.h  afl_mechanism.cc  afl_mechanism.h  debug_feedback.cc  debug_feedback.h  debug_feedback_mechanism.cc  debug_feedback_mechanism.h  debug_mechanism.cc  debug_mechanism.h  feedback.h  feedback_mechanism.cc  feedback_mechanism.h  fuzz_score.h  mechanism.cc  mechanism.h
omnifuzz/fuzzer/: fuzzer.cc  fuzzer.h  main.cc  testcase.h  testcase_manager.cc  testcase_manager.h
omnifuzz/fuzzer/executor/: executor.h  fork_client.cc
omnifuzz/fuzzer/mutator/: arithmetic.cc  arithmetic.h  bit_flip.cc  bit_flip.h  interesting.cc  interesting.h  mutator.cc  mutator.h
omnifuzz/fuzzer/mutator/unit_test/: Makefile  afl_test.cc  arith_test.cc  bit_flip_test.cc  composite_test.cc  interest_test.cc
omnifuzz/fuzzer/preprocessor/: Makefile  a.c  access  access.c
omnifuzz/include/Omnifuzz/FeedbackSystem/: feedback.h  feedback_system_factory.h
omnifuzz/include/Omnifuzz/Fuzzers/: afl_feedback.h  afl_feedback_system_factory.h
omnifuzz/llvm-project-llvmorg-14.0.6/llvm/include/llvm/Transforms/Omnifuzz/: OmnifuzzInstrumentation.h  debug_feedback.h  feedback.h
omnifuzz/llvm-project-llvmorg-14.0.6/llvm/include/llvm/Transforms/Omnifuzz/Feedback/: afl_feedback.h  debug_feedback.h  feedback.h
omnifuzz/llvm-project-llvmorg-14.0.6/llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassRegistry.def
omnifuzz/llvm-project-llvmorg-14.0.6/llvm/lib/Transforms/: CMakeLists.txt
omnifuzz/llvm-project-llvmorg-14.0.6/llvm/lib/Transforms/Omnifuzz/: CMakeLists.txt  OmnifuzzInstrumentation.cpp  debug_feedback.cc
omnifuzz/llvm-project-llvmorg-14.0.6/llvm/lib/Transforms/Omnifuzz/Feedback/: afl_feedback.cc  debug_feedback.cc
omnifuzz/mutator/: CMakeLists.txt  afl_mutator.cc  afl_mutator.h  arithmetic.cc  arithmetic.h  bit_flip.cc  bit_flip.h  deterministic_mutator.cc  deterministic_mutator.h  dictionary.cc  dictionary.h  havoc_mutator.cc  havoc_mutator.h  interesting.cc  interesting.h  mutator.cc  mutator.h
omnifuzz/mutator/unit_test/: Makefile  afl_test.cc  arith_test.cc  bit_flip_test.cc  deterministic_test.cc  dictionary_test.cc  havoc_test.cc  interest_test.cc
omnifuzz/preprocessor/: instrumentator.cc  instrumentator.h  main.cc
omnifuzz/preprocessor/unit_test/: Makefile  main.cc
omnifuzz/scheduler/: CMakeLists.txt  afl_scheduler.cc  afl_scheduler.h  list_scheduler.cc  list_scheduler.h  scheduler.h
omnifuzz/src/Fuzzers/: CMakeLists.txt  afl_feedback.cc
omnifuzz/test/run_feedback/: CMakeLists.txt  main.cc
omnifuzz/unit_test/: Makefile
omnifuzz/unit_test/embedded_forksrv_test/: .cur_input  Makefile  embedded.c  fsrv_exec_test.cc
omnifuzz/unit_test/file_manager_test/: Makefile  mngr_build_tree.cc
omnifuzz/unit_test/fuzz_one/: Makefile  a.c  fuzz_one.cc
omnifuzz/unit_test/timer_test/: Makefile  a.cc  b.cc  quicksort.h
